Adiciona botao de mensagem

--- a/views/professor.ejs
+++ b/views/professor.ejs
@@ -75,5 +75,8 @@
         ut labore et dolore magna aliqua.
       </p> 
     </div>
-  </div> 
+  </div>
+  <button  id="btn_enviar_msg" onclick="location.href='/api/solicitacao/<%= docente.id_lattes %>'">
+      <img src="images/icons/enviar-mensagem.png">
+  </button>
   <div id="pageNavOverlay"></div> 
